# pdm-buildasset

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
pdm_buildasset/: __init__.py  buildassets.py  command.py  hook.py
